--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ $.getJSON("data.json", function(myjson){
 });</script>
 
 <svg viewbox="0 0 942.93903 871.48495"
-    xmlns="http://www.w3.org/2000/svg" onload="init(evt,1)">
+    xmlns="http://www.w3.org/2000/svg" onload="init(evt)">
   
     <script type="text/javascript">
      <![CDATA[
