--- a/index.html
+++ b/index.html
@@ -2281,7 +2281,7 @@ var json = [ {
         "PRICE_BUDGET": "-28"
     }]; </script>
 
-<svg viewbox="0 0 942.93903 871.48495"
+<svg height="100%" viewbox="0 0 942.93903 871.48495"
     xmlns="http://www.w3.org/2000/svg" onload="init(evt,1)">
   
     <script type="text/javascript">
