--- a/index.html
+++ b/index.html
@@ -2280,10 +2280,11 @@ var json = [ {
         "PORPOTION_FLATMATE": "0.250993596",
         "PRICE_BUDGET": "-28"
     }]; </script>
-
-<svg height="100%" viewbox="0 0 942.93903 871.48495"
+<div class="kartta"> 
+<svg height="100%" width="100%" 
     xmlns="http://www.w3.org/2000/svg" onload="init(evt,1)">
-  
+  <!-- viewbox="0 0 942.93903 871.48495" !-->
+
     <script type="text/javascript">
      <![CDATA[
 
